--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sweelix/yii2-postmark",
+    "name": "sweelix/yii2-redis-rbac",
     "description": "PHP 5.6+ PostmarkApp integration for the Yii framework",
     "keywords": ["yii2", "RBAC", "redis"],
     "type": "yii2-extension",
